# Openmw_Config

./: Cargo.toml  README.md
src/: config.rs  lib.rs
src/config/: directorysetting.rs  encodingsetting.rs  error.rs  filesetting.rs  gamesetting.rs  genericsetting.rs  singletonsetting.rs  strings.rs  util.rs
