[package]
name = "openmw-config"
description = "A library for interacting with the Openmw Configuration system."
version = "0.1.8"
authors = ["Dave Corley (S3kshun8) <corleycomputerrepair@protonmail.ch>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/DreamWeave-MP/Openmw_Config"
readme = "README.md"
keywords = ["openmw"]
edition = "2024"

[dependencies]
dirs = "6.0.0"
shellexpand = "3.1.1"
